[package]
name = "corrodedshadow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
litcrypt = "0.3.0"
winapi = { version = "0.3.9", features = ["vsbackup", "vss", "vsserror", "winnt", "winerror", "cguid", "combaseapi", "objidl"] }

[profile.release]
opt-level = 3
strip = true